--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -1,3 +1,24 @@
-.list {
+.headingOne {
+    margin-bottom: 2rem;
+}
+
+.cardList {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     list-style: none;
+}
+
+.eventCard {
+    border: black solid 1px;
+    border-radius: 5px;
+}
+
+.cardHeader {
+    background: hsla(0, 0%, 0%, 0.1);
+    padding: .5rem;
+}
+
+.cardBody {
+    padding: .5rem;
 }
