--- a/client/styles/Layout.module.css
+++ b/client/styles/Layout.module.css
@@ -4,6 +4,7 @@
     flex-flow: column nowrap;
     justify-content: center;
     margin: 0 auto;
-    padding: 0 clamp(0.8rem, 8vw, 3rem);
+    max-width: 1200px;
+    padding: 0 clamp(1rem, 8vw, 5rem);
     width: 100%;
 }
