Complete event dashboard funcitonality and implement rough styles

--- a/client/styles/EventDashboard.module.css
+++ b/client/styles/EventDashboard.module.css
@@ -1,7 +1,18 @@
-.cardList {
+.dashboard {
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: auto;
+}
+
+@media (min-width: 850px) {
+    .dashboard {
+        grid-template-columns: 60% 40%;
+    }
+}
+
+.cardList {
+    display: flex;
+    flex-flow: column nowrap;
     list-style: none;
 }
 
@@ -11,13 +22,46 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
+.eventCard:not(:last-child) {
+    margin-bottom: 1rem;
+}
+
 .cardHeader {
-    background: hsla(0, 0%, 0%, 0.1);
+    align-items: flex-start;
+    background: floralwhite;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    padding: .5rem;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    padding: 1rem;
+}
+
+.cardHeader h2 {
+    white-space: nowrap;
+}
+
+.viewButton {
+    background: palegreen;
+    border: none;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    margin-top: 0.5rem;
+    padding: 0.25rem 1rem;
+    position: relative;
+    top: 0;
+    transition: top ease 0.1s;
+}
+
+.viewButton:hover {
+    cursor: pointer;
+    top: -2px;
 }
 
 .cardBody {
-    padding: .5rem;
+    padding: 1rem;
+}
+
+.cardBody p {
+    margin-bottom: 0.5rem;
 }
