--- a/client/styles/EventDashboard.module.css
+++ b/client/styles/EventDashboard.module.css
@@ -41,8 +41,8 @@
     white-space: nowrap;
 }
 
-.viewButton {
-    background: palegreen;
+.viewButton {;
+    background: antiquewhite;
     border: none;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
