--- a/client/styles/EventForm.module.css
+++ b/client/styles/EventForm.module.css
@@ -33,10 +33,6 @@
     padding: 0.25rem 0.5rem;
 }
 
-.titleInput {}
-
-.categoryInput {}
-
 .descriptionTextArea {
     background: ghostwhite;
     border: none;
@@ -45,10 +41,32 @@
     padding: 0.25rem 0.5rem;
 }
 
-.venueInput {}
+.formControls {
+    display: flex;
+    gap: 0.5rem;
+    width: 100%;
+}
 
-.cityInput {}
+.formControls button {
+    border: none;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    flex: 1;
+    padding: 0.125rem 0.25rem;
+    position: relative;
+    top: 0;
+    transition: top ease 0.1s;
+}
 
-.stateInput {}
+.formControls button:hover {
+    cursor: pointer;
+    top: -2px;
+}
 
-.dateInput {}
+.submitButton {
+    background: palegreen;
+}
+
+.cancelButton {
+    background: ghostwhite;
+}
