--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -1,3 +1,15 @@
-.dashboardHeading {
-    margin-bottom: 2rem;
+.dashboardButton {
+    background: transparent;
+    border: black solid 0.1rem;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    padding: 0.25rem 0.5rem;
+    position: relative;
+    top: 0;
+    transition: top ease 0.1s;
+}
+
+.dashboardButton:hover {
+    cursor: pointer;
+    top: -2px;
 }
