--- a/client/styles/Toolbar.module.css
+++ b/client/styles/Toolbar.module.css
@@ -3,7 +3,11 @@
     width: 100%;
 }
 
-.createButton {
+.toolbarNav > *:not(:last-child) {
+    margin-right: .5rem;
+}
+
+.eventButton {
     background: transparent;
     border: black solid 0.1rem;
     border-radius: 5px;
@@ -14,7 +18,7 @@
     transition: top ease 0.1s;
 }
 
-.createButton:hover {
+.eventButton:hover {
     cursor: pointer;
     top: -2px;
 }
